k8s/services/order-service/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-dev
  labels:
    app: order-service-dev
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service-dev
  template:
    metadata:
      labels:
        app: order-service-dev
        environment: dev
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: order-service
          image: daiioliveira/order-service:latest-dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 15
            failureThreshold: 12
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 300m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1Gi
