k8s/services/order-service/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-dev
  labels:
    app: order-service-dev
    environment: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service-dev
                port:
                  number: 8080
